# polyastra

./: .dockerignore  .env  .env.example  .gitignore  .ignore  AGENTS.md  CHANGELOG.md  CONFIDENCE_ALGORITHM_VALIDATION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  ISSUES_AND_PLAN.md  MIGRATE_TO_LOCAL.md  MIGRATIONS.md  MIGRATION_012_SUMMARY.md  MIGRATION_PLAN.md  NOTIFICATION_FIX_SUMMARY.md  PRICE_VALIDATION_IMPLEMENTATION.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  REFACTOR_PLAN.md  REFACTOR_STATUS.md  RISK_PROFILES.md  SCALE_IN_AUDIT_TRAIL.md  SESSION_IMPROVEMENTS.md  STRATEGY.md  XRP_BALANCE_FIX_SUMMARY.md  analysis_jan18_11pm.md  analyze_confidence.py  calibrate_formula.py  check_bayesian_data.py  check_db.py  check_migration_status.py  check_recent_trades.py  check_window_trades.py  compare_bayesian_additive.py  ctf_settlement_analysis.md  debug_notifications.py  deploy_prod.sh  (+35 more)
docs/: API.md  DEPLOYMENT_GUIDE.md  MIGRATIONS.md  POSITION_FLOW.md  QUICKSTART.md  RISK_PROFILES.md  STRATEGY.md
instructions/: DATABASE_BEST_PRACTICES.md  EMBEDDED_REPLICAS.md  GLOSSARY.md  MIGRATIONS.md  POLYMARKET.md  QUICK_REFERENCE.md  README.md  SESSION_IMPROVEMENTS.md  SHADCN_SVELTE.md  TURSO_CHANGES.md  TURSO_MIGRATION.md
src/: __init__.py  bot.py
summaries/: 2026-01-05_summary.md  2026-01-10_documentation_update.md  2026-01-19_atomic_hedging_documentation.md  2026-01-19_skill_updates_atomic_hedging.md  v0.5.0_documentation_update.md
ui/: .dockerignore  Dockerfile  README.md  biome.json  components.json  index.html  jsconfig.json  package-lock.json  (+4 more)
(+100 files in other folders)
