[project]
name = "polyflup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.10"
dependencies = [
    "eth-account>=0.13.7",
    "pandas>=2.3.3",
    "py-clob-client>=0.34.5",
    "py-builder-relayer-client>=0.0.1",
    "py-builder-signing-sdk>=0.0.2",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "ta>=0.11.0",
    "web3>=7.14.0",
    "psutil>=5.9.0",
]
